# MultiAgent-CUA

./: .env  .env.sample  .gitignore  CONTRIBUTING.md  README.md  REMOTE.md  architecture-diagram.mmd  pyproject.toml  setup-github-remote.ps1
computer-use/: .pylintrc  README.md  app.py  browser_interaction_tool.py  crew_browser_tools.py  crew_orchestration.py  cua.py  direct_navigator.py  local_computer.py  main.py  main_playwright.py  playwright_computer.py  requirements.txt
computer-use/reports/: report_2025-05-10_14-00-27_find_xbox_deals.md  report_2025-05-10_14-01-43_can_you_check_the_xbox_website.md  report_2025-05-10_14-08-08_find_microsoft_stock_price.md
computer_use_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
