[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-cua"
version = "0.1.0"
description = "Computer Use Model for Azure AI services integration (for educational purposes only)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shyam Sridhar"}
]
urls = {Repository = "https://github.com/shyamsridhar123/MultiAgent-CUA"}

dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.1.5,<0.2.0",
    "openai>=1.11.0",
    "playwright>=1.41.0",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.2.0",
    "aiosignal>=1.3.0",
    "requests>=2.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.3.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0"
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0"
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0"
]

[tool.setuptools]
packages = ["computer-use"]
package-dir = {"computer-use" = "computer-use"}

[tool.setuptools.package-data]
"computer-use" = ["*.py", "**/*.py"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
